--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,15 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for <a href="http://www.railstutorial.org/">
-  Ruby on Rails Tutorial</a> sample application.
-</p>
+<div class="container py-4">
+
+   <div class="p-5 mb-4 bg-body-tertiary border rounded-3  text-center">
+      <div class="container-fluid py-5 ">
+        <h1 class="fw-bold">Welcome to the Sample App</h1>
+        <p class="fs-6 text-center">This is the home page for the
+        <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+          sample application.</p>
+        <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+      </div>
+    </div>
+  </div>
+
+  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+                        "https://rubyonrails.org/" %>
