--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg border rounded-3" style="background-color: #2F4F4F;">
+<nav class="navbar navbar-expand-lg border rounded-3" style="background-color: #6610f2;">
   <div class="container-fluid">
     <%= link_to 'SAMPLE APP', root_path, class: "navbar-brand text-white fw-bold fs-4 font-monospace" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
