--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,9 @@
             Account
           </button>
           <ul class="dropdown-menu dropdown-menu-end">
+            <li><%= link_to "Users", users_path, class: "dropdown-item" %></li>
             <li><%= link_to "Profile", user_path(current_user), class: "dropdown-item" %></li>
-            <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user), class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= button_to "Log out", logout_path, method: :delete, class: "dropdown-item" %></li>
           </ul>
