--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,9 @@
 
    <div class="p-5 mb-4 bg-body-tertiary border rounded-3  text-center">
       <div class="container-fluid py-5 ">
-        <h1 class="fw-bold">Welcome to the Sample App</h1>
+        <h1 class="fw-bold">Welcome to the Twitter App</h1>
         <p class="fs-6 text-center">This is the home page for the
-        <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+        <a href="https://rubyonrails.org/">Ruby on Rails</a>
           sample application.</p>
         <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
       </div>
