--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         </div>
 
       <% else %>
-        <li class="nav-item"><%= link_to "Login", login_path, class: "nav-link active text-white fs-5 font-monospace" %></li>
+        <li class="nav-item"><%= link_to "Login", login_path, class: "nav-link active text-white fs-5 fw-bold" %></li>
       <% end %>
     </ul>
   </div>
