--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if @user.errors.any? %>
-  <div class="col-sm-4 center-block">
+<div class="col-sm-4 center-block" id="error_explanation">
     <div class="alert alert-danger" role="alert">
         The form contains <%= pluralize(@user.errors.count, "error") %>
     </div>
@@ -8,5 +8,5 @@
       <li><%= message %></li>
       <% end %>
     </ul>
-  </div>
+</div>
 <% end %>
